--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="static/css/main.css">
+		<!-- <link rel="stylesheet" type="text/css" href="static/css/main.css"> -->
+		<link rel="stylesheet" type="text/css" href="static/css/mystyle.css">
 		<script src="static/libs/jquery-1.10.1.min.js"></script>
 		<script src="static/libs/modernizr.custom.74850.js"></script>
 		<script src="static/js/scripts.js"></script>		
@@ -48,25 +49,27 @@
 					<h2>Projects</h2>
 					<div class="project-panel">
 						<div class="project-content">
-							<h3>Manuscripter</h3>
-							<div class="project-description">
-								<div class="project-text">
-									<div class="project-description">Prepping for an inductive Bible Study? Here is the tool for you!  Manuscripter allows you to get just the text of any Bible passage, letting you focus on reading scripture and removing one more burden in your life. 
+							<div class="thumbnail">
+								<h3>Manuscripter</h3>
+								<div class="project-description">
+									<div class="project-text">
+										<div class="project-description">Prepping for an inductive Bible Study? Here is the tool for you!  Manuscripter allows you to get just the text of any Bible passage, letting you focus on reading scripture and removing one more burden in your life. 
+										</div>
+										
+										<div class="project-footer">
+											<div class="project-techspecs">
+											Technology Used: Bootstrap, Backbone, Node.js, RESTful WebServices
+											</div>	
+											<div class="project-links">
+												<a class="demo-link" href="http://manuscripter.aws.af.cm/index.html">View Demo</a>|<a class="code-link" href="https://bitbucket.org/nganman/manuscripter">View Code</a>
+											</div>	
+										</div>
+										
 									</div>
 									
-									<div class="project-footer">
-										<div class="project-techspecs">
-										Technology Used: Bootstrap, Backbone, Node.js, RESTful WebServices
-										</div>	
-										<div class="project-links">
-											<a class="demo-link" href="http://manuscripter.aws.af.cm/index.html">View Demo</a>|<a class="code-link" href="https://bitbucket.org/nganman/manuscripter">View Code</a>
-										</div>	
+									<div class="project-image">
+										<img class="project-example-image" id="manuscripter_image"/>
 									</div>
-									
-								</div>
-								
-								<div class="project-image">
-									<img class="project-example-image" id="manuscripter_image"/>
 								</div>
 							</div>
 						</div>
