--- a/templates/index2.html
+++ b/templates/index2.html
@@ -13,9 +13,9 @@
 		</script>
 		<div id="wrapper">		
 			<div id="mask">
+				<a name="title"></a>
 				<div id="titlePanel" class="item">
-					<a name="title"></a>
-					<div id="title" class="item">
+					<div id="title">
 						<div class="tile">
 							<h1>Christopher Ngan</h1>
 							<ul class="navlist">
