added thumbnails to all pages

--- a/static/css/orig_less/experience.less
+++ b/static/css/orig_less/experience.less
@@ -2,7 +2,14 @@
 	margin: 0.5em;
 }
 
+#experience_content{
+	.thumbnail{
+		// width: 23%;
+	}
+}
+
 .experience-description{
 	margin:1em;
+	text-align: center;
 	display: inline-block;
 }
