--- a/static/css/orig_less/learning.less
+++ b/static/css/orig_less/learning.less
@@ -4,6 +4,13 @@
 	margin: 0.5em;
 }
 
+
+#education_content{
+	.thumbnail{
+		width: 46%
+	}
+	
+}
 .learning-content{
 	margin-top: 1em;
 }
@@ -11,13 +18,16 @@
 .learning-image{
 	height: 164px;
 	width: 226px;
-	display: inline-block;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .learning-description{
 	display: inline-block;
-	width: 75%;
+	
 	vertical-align: top;
+	text-align: center;
 	padding: 0.5em;
 }
 
