--- a/static/css/orig_less/nav.less
+++ b/static/css/orig_less/nav.less
@@ -3,8 +3,12 @@
 .title-panel{
 	padding: 0.75em;
 	background: @titleBackground;
+	text-align: center;
 	color: @fontColorInverse;
 
+	h1{
+		margin:0.2em;
+	}
 	a:link{
 		color: @fontColorInverse;
 	}
@@ -49,7 +53,7 @@
 }
 
 .nav-bar{
-	padding-bottom: 0.5em;
+	padding-bottom: 0.2em;
 }
 
 .big-panel{
