--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -1,7 +1,11 @@
 .title-panel {
   padding: 0.75em;
   background: #000000;
+  text-align: center;
   color: #ffffff;
+}
+.title-panel h1 {
+  margin: 0.2em;
 }
 .title-panel a:link {
   color: #ffffff;
@@ -35,7 +39,7 @@
   display: inline-block;
 }
 .nav-bar {
-  padding-bottom: 0.5em;
+  padding-bottom: 0.2em;
 }
 .big-panel {
   position: absolute;
@@ -45,24 +49,26 @@
 .project-text {
   display: inline-block;
   vertical-align: top;
-  width: 60%;
-  float: left;
+  text-align: center;
+  font-size: 0.9em;
   position: relative;
 }
 .project-description {
   display: inline-block;
   vertical-align: top;
+  text-align: center;
   padding: 0.5em;
+}
+.project-title {
+  text-align: center;
 }
 .project-links {
   display: inline-block;
   vertical-align: bottom;
 }
-.project-image {
-  display: inline-block;
-}
 .project-footer {
   height: auto;
+  text-align: center;
 }
 .project-techspecs {
   font-size: 0.9em;
@@ -70,9 +76,10 @@
 }
 .project-example-image {
   height: 250px;
-  float: right;
-  width: 400px;
-  display: inline-block;
+  width: 80%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 #manuscripter_image {
   background-image: url('../img/manuscripter.png');
@@ -83,20 +90,17 @@
 #piano_image {
   background-image: url('../img/inprogress.png');
 }
-.project-panel {
-  margin: 0.5em;
-}
 .demo-link {
-  padding-right: 0.2em;
-  margin-right: 0em;
   font-weight: bold;
 }
 .code-link {
   font-weight: bold;
-  padding-left: 0.2em;
 }
 .learning-panel {
   margin: 0.5em;
+}
+#education_content .thumbnail {
+  width: 46%;
 }
 .learning-content {
   margin-top: 1em;
@@ -104,12 +108,14 @@
 .learning-image {
   height: 164px;
   width: 226px;
-  display: inline-block;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 .learning-description {
   display: inline-block;
-  width: 75%;
   vertical-align: top;
+  text-align: center;
   padding: 0.5em;
 }
 #uwaterloo_image {
@@ -125,10 +131,45 @@
 }
 .experience-description {
   margin: 1em;
+  text-align: center;
   display: inline-block;
 }
+/* entire container, keeps perspective */
+/* flip the pane when hovered */
+.thumbnail:hover .flipper,
+.thumbnail.hover .flipper {
+  transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+}
+/* flip speed goes here */
+.flipper {
+  transition: 0.6s;
+  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  position: relative;
+}
+/* hide back of pane during swap */
+.front,
+.back {
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+/* front pane, placed above back */
+.front {
+  z-index: 2;
+}
+/* back, initially hidden pane */
+.back {
+  transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+}
 body {
-  font-family: "HelveticaNeueW01-75Bold", "Helvetica", Arial, sans-serif;
+  font-family: "Segoe UI", "Segoe UI Web Regular", "Segoe UI Symbol", "Helvetica Neue", "BBAlpha Sans", "S60 Sans", Arial, "sans-serif";
   margin: 0em;
 }
 h1 {
@@ -150,6 +191,9 @@ h4 {
 a {
   text-decoration: none;
   margin-right: 1.2em;
+}
+.title {
+  text-align: center;
 }
 .hidden {
   visibility: hidden;
@@ -174,13 +218,25 @@ a {
   color: #808080 ;
 }
 .thumbnail {
-  width: 33%;
+  width: 29%;
+  height: 300px;
   border: 0.1em solid black;
   padding: 0.5em;
+  margin: 0.2em;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -o-border-radius: 10px;
   -ms-border-radius: 10px;
   -khtml-border-radius: 10px;
   border-radius: 10px;
+  display: inline-block;
+  vertical-align: top;
+}
+.row {
+  float: left;
+  width: 100%;
+  height: 100%;
+  padding-left: auto;
+  padding-right: auto;
+  display: block;
 }
