--- a/static/css/orig_less/main.less
+++ b/static/css/orig_less/main.less
@@ -3,10 +3,12 @@
 @import "projects.less";
 @import "learning.less";
 @import "experience.less";
+@import "flipper.less";
 
 
 body{
-	font-family: "HelveticaNeueW01-75Bold", "Helvetica", Arial, sans-serif;
+	// font-family: "Segoe WP","HelveticaNeueW01-75Bold", "Helvetica", Arial, sans-serif;
+	font-family:"Segoe UI", "Segoe UI Web Regular", "Segoe UI Symbol", "Helvetica Neue", "BBAlpha Sans", "S60 Sans", Arial, "sans-serif";
 	margin: 0em;
 	
 }
@@ -24,6 +26,7 @@ h2{
 h3{
 	margin-bottom: 0.1em;
 	margin-top: 0.1em;
+
 }
 h4{
 	margin: 0px 0px 0px 1em;
@@ -31,6 +34,10 @@ h4{
 a{
 	text-decoration: none;		
 	margin-right: 1.2em;	
+}
+
+.title{
+	text-align: center;
 }
 
 .hidden{     visibility: hidden;     height: 0em; }
@@ -57,9 +64,14 @@ a{
 }
 
 .thumbnail{
-	width: 33%;
+	width: 29%;
+	height: 300px;
+	// height: auto;
 	border: 0.1em solid black;
 	padding:0.5em;
+	margin:0.2em;
+	// float: left;
+	// position: relative;
 	// background-color: #808080 ;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
@@ -67,4 +79,16 @@ a{
 	 -ms-border-radius: 10px;
 	 -khtml-border-radius: 10px;
 	 border-radius: 10px;
+	display: inline-block;
+	vertical-align: top;
 }
+.row{
+	float: left;
+	width: 100%;
+	height: 100%;
+	padding-left: auto;
+	padding-right:  auto;
+	display: block;
+	// position: absolute;
+}
+
