--- a/static/css/orig_less/projects.less
+++ b/static/css/orig_less/projects.less
@@ -3,31 +3,39 @@
 .project-text{
 	display: inline-block;
 	vertical-align: top;		
-	width: 60%;
+	// width: 60%;
 	
-	float: left;
-	
+	text-align: center;
+	font-size: 0.9em;
 	position: relative;
 }
 
 .project-description{
 	display: inline-block;
 	vertical-align: top;
+	text-align: center;
 	padding: 0.5em;
 }
 
+.project-title{
+	text-align: center;
+}
 .project-links{
 	display: inline-block;
 	vertical-align: bottom;
 	
 }
 .project-image{
-	display: inline-block;	
+	// display: inline-block;	
+	// display: block;
+ //    margin-left: auto;
+ //    margin-right: auto;
 }
 .project-footer{
-	//position: absolute;
+	// position: absolute;
 	height: auto;
-	//bottom: 0;	
+	text-align: center;
+	// bottom: 0;	
 }
 .project-techspecs{
 	
@@ -36,10 +44,14 @@
 }
 
 .project-example-image{
-	height: 250px;
-	float: right;
-	width:400px;
-	display: inline-block;
+	height: 250px;	
+	width:80%;
+	// width:400px;
+	display: block;
+    margin-left: auto;
+
+    margin-right: auto;
+	// display: inline-block;
 }
 
 #manuscripter_image{
@@ -55,13 +67,13 @@
 }
 
 .project-panel{
-	margin: 0.5em;
+	// margin: 0.5em;
 }
 
 
 .demo-link{
-	padding-right: 0.2em;
-	margin-right: 0em;
+	// padding-right: 0.2em;
+	// margin-right: 0em;
 	font-weight: bold;
 }
 
@@ -69,5 +81,5 @@
 
 .code-link{
 	font-weight: bold;
-	padding-left: 0.2em;
+	// padding-left: 0.2em; 	
 }
