--- a/templates/index.html
+++ b/templates/index.html
@@ -48,72 +48,94 @@
 				<div class="content hidden" id="projects_content">
 					<h2>Projects</h2>
 					<div class="project-panel">
-						<div class="project-content">
-							<div class="thumbnail">
-								<h3>Manuscripter</h3>
-								<div class="project-description">
-									<div class="project-text">
-										<div class="project-description">Prepping for an inductive Bible Study? Here is the tool for you!  Manuscripter allows you to get just the text of any Bible passage, letting you focus on reading scripture and removing one more burden in your life. 
+						<div class="row">
+							<div class="thumbnail"  ontouchstart="this.classList.toggle('hover');">
+								<div class="flipper">
+									<div class="front">
+										<h3 class="project-title">Manuscripter</h3>
+										<div class="project-image">
+											<img class="project-example-image" id="manuscripter_image"/>
 										</div>
-										
-										<div class="project-footer">
-											<div class="project-techspecs">
-											Technology Used: Bootstrap, Backbone, Node.js, RESTful WebServices
-											</div>	
-											<div class="project-links">
-												<a class="demo-link" href="http://manuscripter.aws.af.cm/index.html">View Demo</a>|<a class="code-link" href="https://bitbucket.org/nganman/manuscripter">View Code</a>
-											</div>	
-										</div>
-										
 									</div>
 									
-									<div class="project-image">
-										<img class="project-example-image" id="manuscripter_image"/>
+									<div class="back">
+										<div class="project-text">
+											<div class="project-description">
+												A web app that acts as a tool which provides biblical text without any annotations to provide plain, old Scripture
+											</div>
+											
+											<div class="project-footer">
+												<div class="project-techspecs">
+												Bootstrap, Backbone, Node.js, RESTful WebServices
+												</div>	
+												<div class="project-links">
+													<a class="demo-link" href="http://manuscripter.aws.af.cm/">View Demo</a>|<a class="code-link" href="https://bitbucket.org/nganman/manuscripter">View Code</a>
+												</div>	
+											</div>												
+										</div>											
+									
 									</div>
+									
+								</div>
+							</div>
+							
+						
+						
+						
+							<div class="thumbnail"  ontouchstart="this.classList.toggle('hover');">
+								<div class="flipper">
+									<div class="front">
+										<h3 class="project-title">Online Portfolio</h3>
+										<div class="project-image">
+												<img class="project-example-image" id="website_image"/>
+											</div>
+									</div>
+									<div class="back">
+										<div class="">
+
+											<div class="project-text">
+												<div class="project-description">Welcome to my personal website.  This is an online portfolio to display a little bit of who I am and the things I have had a chance to do.  Please understand that this is a work in progress still and if you have any feedback, please feel free to contact me accordingly.
+												</div>
+												<div class="project-footer">
+													<div class="project-techspecs">
+													Technology Used: HTML5, CSS, JQuery
+													</div>	
+													<div class="project-links">
+														<a class="code-link" href="https://bitbucket.org/nganman/personal-website/src">View Code</a>
+													</div>	
+												</div>															
+											</div>						
+											
+										</div>		
+									</div>		
+								</div>				
+							</div>
+								
+							<div class="thumbnail">
+								<div class="flipper">
+									<div class="front">
+										<h3>Electric Piano</h3>
+										<div class="project-image">
+											<img class="project-example-image" id="piano_image"/>
+										</div>
+									</div>
+									<div class="back">
+										<div class="project-text">
+											<div class="project-description">This was a final project for a lab course I took in my first year of Engineering at Waterloo.  It uses an FPGA board to control the frequency of two speakers by simply sending a binary signal at controlled time intervals.  This oscillation of high and low created the sweet tones of an electric piano.  
+											</div>
+											<div class="project-footer">
+												<div class="project-techspecs">
+												Technology Used: Spartan 3 FPGA Board, Circuit Design, Verilog
+												</div>									
+											</div>															
+										</div>						
+										
+									</div>				
 								</div>
 							</div>
 						</div>
-					
-					
-						<div class="project-content">
-							<h3>Online Portfolio</h3>
-							<div class="project-description">
-								<div class="project-text">
-									<div class="project-description">Welcome to my personal website.  This is an online portfolio to display a little bit of who I am and the things I have had a chance to do.  Please understand that this is a work in progress still and if you have any feedback, please feel free to contact me accordingly.
-									</div>
-									<div class="project-footer">
-										<div class="project-techspecs">
-										Technology Used: HTML5, CSS, JQuery
-										</div>	
-										<div class="project-links">
-											<a class="code-link" href="https://bitbucket.org/nganman/personal-website/src">View Code</a>
-										</div>	
-									</div>															
-								</div>						
-								<div class="project-image">
-									<img class="project-example-image" id="website_image"/>
-								</div>
-							</div>				
-						</div>
-						<div class="project-content">
-							<h3>Electric Piano</h3>
-							<div class="project-description">
-								<div class="project-text">
-									<div class="project-description">This was a final project for a lab course I took in my first year of Engineering at Waterloo.  It uses an FPGA board to control the frequency of two speakers by simply sending a binary signal at controlled time intervals.  This oscillation of high and low created the sweet tones of an electric piano.  
-									</div>
-									<div class="project-footer">
-										<div class="project-techspecs">
-										Technology Used: Spartan 3 FPGA Board, Circuit Design, Verilog
-										</div>									
-									</div>															
-								</div>						
-								<div class="project-image">
-									<img class="project-example-image" id="piano_image"/>
-								</div>
-							</div>				
-						</div>
-						<div class="project-content">
-							<h3>Smart Watch Metronome</h3>
+						<div class="thumbnail">
+							<h3 class="project-title">Smart Watch Metronome</h3>
 							<div class="project-description">
 								<div class="project-text">
 									<div class="project-description"><h2>IN PROGRESS</h2>
@@ -121,7 +143,7 @@
 									<div class="project-footer">
 										<div class="project-techspecs">
 										Technology Used: Android
-										</div>									
+										</div>				
 									</div>															
 								</div>						
 								
