--- a/static/css/orig_less/nav.less
+++ b/static/css/orig_less/nav.less
@@ -1,5 +1,7 @@
 @import "variables.less";
 
+
+
 .title-panel{
 	padding: 0.75em;
 	background: @titleBackground;
@@ -57,9 +59,10 @@
 }
 
 .big-panel{
-	position: absolute;
-	
-	margin: 5em;
+	// position: absolute;
+	margin-left: 5em;
+	margin-right: 5em;
+	 // margin: 2em auto 2em auto;
 	text-align: center;
 
 }
