--- a/static/css/orig_less/main.less
+++ b/static/css/orig_less/main.less
@@ -76,18 +76,18 @@ a{
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	 -o-border-radius: 10px;
-	 -ms-border-radius: 10px;
+	 -ms-border-radius: 10px;	
 	 -khtml-border-radius: 10px;
 	 border-radius: 10px;
 	display: inline-block;
 	vertical-align: top;
 }
 .row{
-	float: left;
-	width: 100%;
-	height: 100%;
-	padding-left: auto;
-	padding-right:  auto;
+	// float: left;
+	// width: 100%;
+	// height: 100%;
+	// padding-left: auto;
+	// padding-right: 	 auto;
 	display: block;
 	// position: absolute;
 }
