--- a/static/css/orig_less/variables.less
+++ b/static/css/orig_less/variables.less
@@ -1,5 +1,6 @@
 @fontColor:black;
 @fontColorInverse:white;
-@titleBackground:black;
+@titleBackground:#e53232;
+@thumbnailBorder:#e53232;
 @thumbnailBackground:white;
 @selectedNav : #808080;
