--- a/css/orig_less/experience.less
+++ b/css/orig_less/experience.less
@@ -1,5 +1,6 @@
 .experience-panel{
 	margin: 0.5em;
+	padding: 0.5em;
 }
 
 
@@ -8,4 +9,26 @@
 	margin:1em;
 	text-align: center;
 	display: inline-block;
+}
+
+.experience-image{
+	height: 250px;	
+	// width:80%;
+	width:226px;
+	display: block;
+    margin-left: auto;
+
+    margin-right: auto;
+	// display: inline-block;
+	background-repeat: no-repeat;
+}
+
+#nicoya_image{
+	background-image: url('../img/nicoya.png');	
+	margin-top: 2em;
+	background-size: contain;
+}
+#ura_image{
+	background-image: url('../img/waterloo-logo.png');	
+	
 }
