--- a/css/orig_less/projects.less
+++ b/css/orig_less/projects.less
@@ -63,7 +63,10 @@
 }
 
 #piano_image{
-	background-image: url('../img/inprogress.png');	
+	background-image: url('../img/elec-piano-1.jpg');	
+	background-size: cover;
+	background-repeat: no-repeat;
+
 }
 
 .project-panel{
