revamped colors, content and overall code

--- a/css/less/learning.less
+++ b/css/less/learning.less
@@ -32,6 +32,8 @@
 
 #uwaterloo_image{
 	background-image: url('../img/waterloo-logo.png');
+	background-repeat: no-repeat;
+	background-position: center;
 }
 
 #markham_image{
