--- a/css/less/main.less
+++ b/css/less/main.less
@@ -8,13 +8,15 @@
 
 body{
 	// font-family: "Segoe WP","HelveticaNeueW01-75Bold", "Helvetica", Arial, sans-serif;
-	font-family:Segoe UI, Helvetica, Arial, Tahoma;
+	font-family:Segoe UI light, Helvetica, Arial, Tahoma;
 	margin: 0em;
 	// background: url('../img/background.jpg');
-	background: @bodyBackground;
+	background: url('../img/mountain.jpg');
+	background-attachment: fixed;
+		background: @bodyBackground;
 	// background-repeat: no-repeat;
 	background-position: center top;
-	background-size: stretch;
+	background-size: fill;
 }
 
 h1{
@@ -33,7 +35,7 @@ h3{
 
 }
 h4{
-	margin: 0px 0px 0px 1em;
+	margin: 0px 0px 0px 0em;
 }
 a{
 	text-decoration: none;		
@@ -53,7 +55,7 @@ a{
 
 
 #content-panel{
-	padding:2em;
+	padding: 0em 2em 1em 2em;
 	color: black;
 }
 
