--- a/css/less/projects.less
+++ b/css/less/projects.less
@@ -45,21 +45,46 @@
 
 .project-example-image{
 	height: 250px;	
+	//height: 80%;
 	width:80%;
 	// width:400px;
 	display: block;
     margin-left: auto;
-
+    border: none;
     margin-right: auto;
 	// display: inline-block;
+	background-position: center;
 }
 
 #manuscripter_image{
 	background-image: url('../img/manuscripter.png');	
 }
+#medidata_image{
+	background-image: url('../img/medidata.png');	
+	background-size: contain;
+	background-repeat: no-repeat;	
+
+}
+#talklight_image{
+	background-image: url('../img/manuscripter.png');	
+}
+
+#playontime_image{
+	background-image: url('../img/manuscripter.png');		
+}
+
+
+#myophysio_image{
+	background-image: url('../img/myophysio.png');
+	background-size: cover;
+	// height: 200px;
+	background-repeat: no-repeat;
+	background-position: center;
+}
 
 #website_image{
 	background-image: url('../img/website.png');	
+
 }
 
 #piano_image{
