--- a/css/less/experience.less
+++ b/css/less/experience.less
@@ -1,6 +1,6 @@
 .experience-panel{
-	margin: 0.5em;
-	padding: 0.5em;
+	// margin: 0.5em;
+	// padding: 0.5em;	
 }
 
 
@@ -17,18 +17,34 @@
 	width:226px;
 	display: block;
     margin-left: auto;
-
+    vertical-align: middle;
     margin-right: auto;
+    margin-top: 2.5em;
 	// display: inline-block;
 	background-repeat: no-repeat;
 }
 
 #nicoya_image{
 	background-image: url('../img/nicoya.png');	
-	margin-top: 2em;
+	// margin-top: 2em;
 	background-size: contain;
 }
+
+#genesys_image{
+	background-image: url('../img/genesys.png');	
+	// margin-top: 1.5em;
+	// margin-right: 1em;
+	// background-size: cover;
+}
+
 #ura_image{
-	background-image: url('../img/waterloo-logo.png');	
+ 		background-image: url('../img/waterloo-logo.png');	
+	
+}
+
+#cole_image{
+
+	// margin-top: 2em;
+	background-image: url('../img/cole_engineering.png');	
 	
 }
