--- a/css/less/nav.less
+++ b/css/less/nav.less
@@ -60,6 +60,11 @@
 	bottom: 0;
 	width: 100%;
 	margin-bottom: 2em;
+	// background-color: @bodyBackground;
+	color:black;
+	a{
+		color: black;
+	}
 }
 
 .nav-bar{
@@ -70,7 +75,11 @@
 	// position: absolute;
 	// margin-left: 5em;
 	// margin-right: 5em;
-	 margin: 2em auto 2em auto;
+	 margin: 5em auto 2em auto;
 	text-align: center;
 
+}
+
+.social-nav-bar{
+	// background: @bodyBackground;
 }
