history is done properly

--- a/v2/css/less/main.less
+++ b/v2/css/less/main.less
@@ -3,8 +3,8 @@
 
 body{
 
-    //font-family: Segoe UI light, Helvetica, Arial, Tahoma;
-    font: 13px/14px Arial,sans-serif;
+    font-family: 'Open Sans', sans-serif; 
+    //font: 13px/14px Arial,sans-serif;
 }
 .center{
     text-align: center;
@@ -19,10 +19,3 @@ body{
     li{display:inline;}
     a{float:left}
 }
-/*
-.centered-pills { text-align:center; }
-.centered-pills ul.nav-pills { display:inline-block; }
-.centered-pills li { display:inline; }
-.centered-pills a { float:left; }
-//* html .centered-pills ul.nav-pills { display:inline; } /* IE6 */
-//*+html .centered-pills ul.nav-pills { display:inline; } /* IE7 */
