--- a/v2/css/less/title.less
+++ b/v2/css/less/title.less
@@ -1,19 +1,21 @@
 @import "variable.less";
 
 .title-panel{
-    width:100%;
-    border-bottom: 2px @colorMain;
-    background-image:url(@nycImage) ;
-    h1{
-        margin: 0em;
-        padding: 1em;
-    }
-    ul{
-        text-align:center;
-        li{
-            display: inline;
-        }
-    }
+  width:100%;
+  border-bottom: 2px @colorMain;
+  background-image:url(@nycImage) ;
+  padding-top:3em;
+  padding-bottom:3em;
+  h1{
+      margin: 0em;
+      padding: 1em;
+  }
+  ul{
+      text-align:center;
+      li{
+          display: inline;
+      }
+  }
 }
 
 
