--- a/v2/css/less/variable.less
+++ b/v2/css/less/variable.less
@@ -1,6 +1,15 @@
-@colorMain: #1f8dd6;
-
-
-// Urls
-// from http://hdw.eweb4.com/wallpapers/9156/
-@nycImage: '../images/nyc.jpg';
+/**
+  * Base Colors
+  */ 
+@blue: #1f8dd6;
+@white: white;
+@black:#333;
+/**
+  * Standard Colors
+  */
+@borderColor: @black; 
+@colorMain: @blue;
+/**
+  * Urls
+  */
+@nycImage: '../images/nyc.jpg';  // http://hdw.eweb4.com/wallpapers/9156/
