--- a/v2/css/less/flipper.less
+++ b/v2/css/less/flipper.less
@@ -8,6 +8,10 @@
   p{
     padding-top:2em;
   }
+
+  img{
+    height:16em;
+  }
 }
 /* flip the pane when hovered */
 .thumbnail:hover .flipper, .thumbnail.hover .flipper {
