--- a/v2/css/main.css
+++ b/v2/css/main.css
@@ -37,6 +37,9 @@
 .thumbnail p {
   padding-top: 2em;
 }
+.thumbnail img {
+  height: 16em;
+}
 /* flip the pane when hovered */
 .thumbnail:hover .flipper,
 .thumbnail.hover .flipper {
