fixed bug where thumbnail does not match content

--- a/v2/css/less/main.less
+++ b/v2/css/less/main.less
@@ -2,6 +2,8 @@
 @import "title.less";
 @import "home.less";
 @import "flipper.less";
+@import "portfolio.less";
+@import "footer.less";
 body{
 
     font-family: 'Open Sans', sans-serif; 
