--- a/v2/css/less/flipper.less
+++ b/v2/css/less/flipper.less
@@ -1,7 +1,7 @@
 
 /* entire container, keeps perspective */
 .thumbnail {
-  perspective: 1000;
+  //perspective: 1000;
   text-align:center;
   box-shadow:none;
   border:none;
@@ -22,8 +22,8 @@
   -ms-transform: rotateY(180deg);
 }
 
-.thumbnail, .front, .back {
-}
+//.thumbnail, .front, .back {
+//}
 
 /* flip speed goes here */
 .flipper {
@@ -34,7 +34,10 @@
    -ms-transform-style: preserve-3d;
    -o-transform-style: preserve-3d;
 
-  position: relative;
+//  position: relative;
+}
+.back{
+  position:absolute;
 }
 
 /* hide back of pane during swap */
@@ -44,7 +47,6 @@
   -moz-backface-visibility :hidden;
   -o-backface-visibility :hidden;
   -ms-backface-visibility :hidden;
-  position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
