--- a/v2/css/main.css
+++ b/v2/css/main.css
@@ -29,7 +29,6 @@
 }
 /* entire container, keeps perspective */
 .thumbnail {
-  perspective: 1000;
   text-align: center;
   box-shadow: none;
   border: none;
@@ -57,7 +56,9 @@
   -moz-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
   -o-transform-style: preserve-3d;
-  position: relative;
+}
+.back {
+  position: absolute;
 }
 /* hide back of pane during swap */
 .front,
@@ -67,7 +68,6 @@
   -moz-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
-  position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
@@ -84,6 +84,12 @@
   -moz-transform: rotateY(180deg);
   -o-transform: rotateY(180deg);
   -ms-transform: rotateY(180deg);
+}
+.footer {
+  background-image: url('../images/nyc.jpg');
+  background-position: bottom;
+  padding: 5em;
+  margin-top: 5em;
 }
 body {
   font-family: 'Open Sans', sans-serif;
