--- a/v2/css/less/main.less
+++ b/v2/css/less/main.less
@@ -6,7 +6,7 @@
 @import "footer.less";
 body{
 
-    font-family: 'Open Sans', sans-serif; 
+    font-family: 'Trebuchet MS', sans-serif; 
     //font: 13px/14px Arial,sans-serif;
 }
 .center{
