--- a/v2/css/main.css
+++ b/v2/css/main.css
@@ -92,7 +92,7 @@
   margin-top: 5em;
 }
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Trebuchet MS', sans-serif;
 }
 .center {
   text-align: center;
