added headshot, background, resume,

--- a/v2/css/less/footer.less
+++ b/v2/css/less/footer.less
@@ -1,8 +1,7 @@
 @import "variable.less";
 .footer{
-  background-image:url(@nycImage) ;
-  background-position: bottom;
-  padding: 5em; 
+//  background-image:url(@nycImage) ;
+  //padding: 5em; 
   margin-top:5em;
-
+  text-align:center;
 }
