--- a/v2/css/less/title.less
+++ b/v2/css/less/title.less
@@ -3,21 +3,23 @@
 .title-panel{
   width:100%;
   border-bottom: 2px @colorMain;
-  background-image:url(@nycImage) ;
+  //background-image:url(@nycImage) ;
   padding-top:3em;
   padding-bottom:3em;
+  text-align: center;
   h1{
       margin: 0em;
-      padding: 1em;
+      padding: 0.2em;
   }
   ul{
       text-align:center;
       li{
           display: inline;
       }
-  }
-  .center{
-    color: @white;
+      a{
+        border-radius: 0px;
+        //background-color: @blue;
+      }
   }
 }
 
