--- a/v2/css/less/variable.less
+++ b/v2/css/less/variable.less
@@ -1,9 +1,10 @@
 /**
   * Base Colors
   */ 
-@blue: #1f8dd6;
+@blue: #477f99;
 @white: white;
 @black:#333;
+@grey: lightGrey;
 /**
   * Standard Colors
   */
@@ -13,3 +14,6 @@
   * Urls
   */
 @nycImage: '../images/nyc.jpg';  // http://hdw.eweb4.com/wallpapers/9156/
+@treeImage: '../images/tree_bark.png';
+
+@backgroundImage: @treeImage; 
