--- a/v2/css/less/footer.less
+++ b/v2/css/less/footer.less
@@ -3,5 +3,10 @@
 //  background-image:url(@nycImage) ;
   //padding: 5em; 
   margin-top:5em;
+  margin-bottom:5em;
   text-align:center;
+  .img-link{
+    height:5em;
+    padding:1em;
+  }
 }
