--- a/v2/css/less/home.less
+++ b/v2/css/less/home.less
@@ -1,10 +1,13 @@
 @import "variable.less";
 
-#home_content{
+#about_content{
   .headshot{
     margin:1em;
     height:10em;
     float:left;
 
+  }
+  p{
+    text-align: justify;
   }
 }
