--- a/v2/css/less/main.less
+++ b/v2/css/less/main.less
@@ -7,6 +7,7 @@
 body{
 
     font-family:"Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif; 
+    color: black;
     
     //font: 13px/14px Arial,sans-serif;
     background-image:url(@backgroundImage);
@@ -16,7 +17,11 @@ body{
     text-align: center;
 }
 p{
-  font-size:1.1em;
+  font-size:1.3em;
+}
+
+.small{
+  font-size:1.2em;
 }
 .nav-centered-pills{
     text-alignt:center;
