--- a/v2/css/less/variable.less
+++ b/v2/css/less/variable.less
@@ -15,5 +15,6 @@
   */
 @nycImage: '../images/nyc.jpg';  // http://hdw.eweb4.com/wallpapers/9156/
 @treeImage: '../images/tree_bark.png';
+@woodImage: '../images/retina_wood.png';
 
-@backgroundImage: @treeImage; 
+@backgroundImage: @woodImage; 
